# gnn-plots

./: .bash_history  .gitignore  .python_history  README.md  pyproject.toml  requirements.txt  setup_cedar.sh  setup_gnn-plots.sh
configs/: base.yaml  config_jetpT.yaml  config_numvert.yaml  config_roc.yaml  config_sampleinfo.yaml  confusion.yaml  discrim.yaml  jet_pt_config.yaml  numvert_config.yaml  roc.yaml  vimatrices_config.yaml
examples/: plot_aux.py  plot_discrim_ej.py  plot_eff_rec_ej.py  plot_roc_ej.py  plot_roc_ej_compare.py
plotter/: config_dict.py  main.py  plotbase.py
plotter/plot_classes/: confusion_matrix_plot.py  discrim_plot.py  jetpt_perf_plot.py  num_vert_perf_plot.py  num_vert_perf_plot_old.py  plotbase.py  roc_plot.py  sample_info_plot.py  vertex_plot.py  vertex_plotV2.py
